 * limitations under the License.
 */

Pig Change Log

Release 0.9.3 - Unreleased

IMPROVEMENTS

PIG-2766: Pig-HCat Usability (vikram.dixit via daijy)

PIG-2555: PigStorageSchema initializes schema and PigContext for every tuple (rangadi via dvryaboy)

PIG-2619: HBaseStorage constructs a Scan with cacheBlocks = false

BUG FIXES

PIG-2775: Register jar does not goes to classpath in some cases (daijy)

PIG-2666: LoadFunc.setLocation() is not called when pig script only has Order By (daijy)

PIG-2671: e2e harness: Reference local test path via :LOCALTESTPATH: (thw via daijy)

PIG-2642: StoreMetadata.storeSchema can't access files in the output directory (Hadoop 0.23) (thw via daijy)

PIG-2621: Documentation inaccurate regarding Pig Properties in trunk (prkommireddi via daijy)

PIG-2540: [piggybank] AvroStorage can't read schema on amazon s3 in elastic mapreduce (rjurney via jcoveney)

PIG-2550: Custom tuple results in "Unexpected datatype 110 while reading tuplefrom binary file" while spilling (daijy)

PIG-2442: Multiple Stores in pig streaming causes infinite waiting (daijy)

PIG-2609: e2e harness: make hdfs base path configurable (outside default.conf) (thw via daijy)

PIG-2590: running ant tar and rpm targets on same copy of pig source results in problems (thejas)

PIG-2588: e2e harness: use pig command for cluster deploy (thw via daijy)

PIG-2576: Change in behavior for UDFContext.getUDFContext().getJobConf() in front-end (thw via daijy)

PIG-2572: e2e harness deploy fails when using pig that does not bundle hadoop (thw via daijy)

PIG-2568: PigOutputCommitter hide exception in commitJob (daijy)

PIG-2564: Build fails - Hadoop 0.23.1-SNAPSHOT no longer available (thw via daijy)

PIG-2535: Bug in new logical plan results in no output for join (daijy)

PIG-2534: Pig generating infinite map outputs (daijy)

PIG-2532: Registered classes fail deserialization in frontend (traviscrawford via julien)

PIG-2493: UNION causes casting issues (vivekp via daijy)
